--- a/views/admin/paymentRecived.ejs
+++ b/views/admin/paymentRecived.ejs
@@ -34,7 +34,7 @@
     <!-- Total Advance -->
     <div class="card text-center my-4">
       <div class="card-body">
-        <h5>Total Advance Received</h5>
+        <h5>Total due from seller</h5>
         <h3 class="fw-bold text-danger">₹<%= totalAdvance.toLocaleString() %></h3>
       </div>
     </div>
